css/style.css
/* ... */
.luntan{
	display: inline-block;
	height: 32px;
	line-height: 32px;
	padding-top: 12px;
	padding-right: 10px;
	font-size: 12px;
}
.luntan a:visited{color: #00A1D9;}
.youxizhongxinInner .right ul{
	margin-top: 50px;
}
.youxizhongxinInner .right li{
	font-size: 12px;
	width: 190px !important;
	height: 14px;
	line-height: 26px;
	height: 26px;
	box-sizing: border-box;
}
.youxizhongxinInner .right li:hover{
	background-color: #E5E9EF;
	color: #00A1D9;
}
.youxizhongxinInner .right{
	position: relative;
}
.gameImg{
	position: absolute;
	width: 220px;
	height: 220px;
	left: 86%;
	top: 9%;
}
/*游戏加框结束*/
/*直播加框*/
.zhiboInner{
	position: absolute;
	width: 526px;
	height: 262px;
	box-shadow: 1px 1px 3px rgba(0,0,0,0.4);
	background-color: #FFF;
	border-radius: 0 0 4px 4px;
	display: none;
}
.zhiboInner .left{
	width: 50%;
	float: left;
}
.zhiboInner .right{
	width: 50%;
	float: right;
}
.hotLive{
	font-size: 13px;
	color: #EA759F;
	margin-left:25px;
}
.zhiboInner ul{
	margin: 0 0 7px 7px;
	border-right: 1px solid #eaeaea;
}
.zhibolist li{
	width: 80px;
	height: 90px !important;
	padding: 8px 0;
	text-align: center;
	position: relative;
}
.zhibolist i{
	position: absolute;
	left: 7px;
	top: 7px;
	width: 63px;
	height: 63px;
	border-radius: 50%;
	font-weight: 700;
	background-color: rgba(0,0,0,0.5);
	color: white;
	text-align: center;
	line-height: 63px;
	opacity: 0;
	z-index: 100000;
}
.zhibolist i:hover{-webkit-animation: LIVE .1s linear;-webkit-animation-fill-mode: forwards;}
@keyframes LIVE{
	from{width: 20px;height: 20px;opacity: 0;}
	to{width: 63px;height:63px;opacity: 1;}
}
.zhibolist img{
	display: block;
	width: 63px;
	height: 63px;
	border-radius: 50%;
	margin: 0 auto;
}
.hotAct img{
	display: block;
	padding: 12px;
	margin: -5px auto;
}
.hotAct li{
	height: 100% !important;
	width: 100%;
	padding: 0;
}
.hotAct li:hover{background-color: #EAEAEA;}
/*直播加框结束*/
/*头像加框开始*/
#gerenzhongxin{
	position: absolute;
	top: 42px;
	left: -100px;
	width: 260px;
	height: 300px;
	background-color: #FFF;
	box-shadow: 1px 1px 3px rgba(0,0,0,0.4);
	z-index: 1000;
	display: none;
}
.smallWidth{
	width: 225px;
	margin: 0 auto;
}
.yonghuID{
	position: absolute;
	left: 37%;
	top:40px;
}
.yonghuLevel{
	display: inline-block;
	width: 19px;
	height: 12px;
	background: url(../img/Level-icons.png);
	background-position: -80px -121px;
	background-repeat: no-repeat;
	vertical-align: middle;
	margin-left: 10px;
}
.coin{
	margin-top: 80px;
}
.coin .left{
	float: left;
}
.coin .right{
	margin-top: 15px;
	float: right;
}
.coinImg{
	background: url(../img/icons.png);
	background-position: -343px -469px;
	background-repeat: no-repeat;
	vertical-align: middle;
	width: 18px;
	height: 18px;
}
.coin span{
	display: inline-block;
	width: 18px;
	height: 18px;
	padding: 5px;
}
.mailtu{
	background: url(../img/icons.png);
	background-position: -343px -534px;
	background-repeat: no-repeat;
	vertical-align: middle;
}
.phonetu{
	background: url(../img/icons.png);
	background-position: -343px -599px;
	background-repeat: no-repeat;
	vertical-align: middle;
}
.leveltu{
	display: inline-block;
	width: 20px;
	height: 20px;
	line-height: 20px;
	background: url(../img/Level-icons.png);
	background-position: -152px -116px;
	background-repeat: no-repeat;
	vertical-align: middle;
	border-radius: 50%;
	background-color: #F3CB85;
}
.levelBar{
	display: inline-block;
	height: 10px;
	width: 180px;
	background-color: #F3CB85;
	margin-left: -2px;
}
.exp{
	float: right;
	font-size: 12px;
	margin-top: -25px;
}
.level{
	margin-top: 10px;
	padding-bottom: 15px ;
	border-bottom: 1px solid #E5E9EF;
}
#gerenzhongxin li{
	float: left !important;
	width: 70px;
	height: 18px !important;
	float: left;
	line-height: 18px;
	padding: 5px 20px;
}
#gerenzhongxin ul{
	margin-top: 3px;
}
.gerenzhongxinIcon{
	display: inline-block;
	width: 16px;
	height: 16px;
	background: url(../img/icons.png);
	background-position: -473px -407px;
	background-repeat: no-repeat;
	vertical-align: middle;
	padding-right: 2px;
}
.tougaoguanliIcon{
	display: inline-block;
	width: 16px;
	height: 16px;
	background: url(../img/icons.png);
	background-position: -536px -1048px;
	background-repeat: no-repeat;
	vertical-align: middle;
	padding-right: 2px;
}
.wodeqianbaoIcon{
	display: inline-block;
	width: 16px;
	height: 16px;
	background: url(../img/icons.png);
	background-position: -472px -474px;
	background-repeat: no-repeat;
	vertical-align: middle;
	padding-right: 2px;
}
.zhibozhongxinIcon{
	display: inline-block;
	width: 16px;
	height: 18px;
	background: url(../img/icons.png);
	background-position: -473px -855px;
	background-repeat: no-repeat;
	vertical-align: middle;
	padding-right: 2px;
}
.gerenList li:hover{color: #00A1D6;cursor: pointer;}
.tuichu{
	width: 100%;
	height: 25px;
	margin-top: 19px;
	line-height: 21px;
	text-indent: 17em;
	background-color: #f4f5f7
}
.tuichu:hover{color: #00A1D6; }
/*头像加框结束*/
/*消息下拉框开始*/
.xiaoxiInner{
	width: 110px;
	height: 211px;
	background-color: white;
	position: absolute;
	left: 665px;
	box-shadow: 1px 1px 3px rgba(0,0,0,0.4);
	border-radius: 0 0 4px 4px;
	display: none;
}
.xiaoxiInner li{
	width: 110px;
	padding:0;
	text-align: center;
}
.xiaoxiInner li:hover{
	background-color: #E5E9EF;
	color: #00A1D6;
}
/*消息下拉框结束*/
/*动态下拉框开始*/
.dongtaiInner{
	width: 363px;
	height: 411px;
	background-color: #FFF;
	position: absolute;
	left: -130px;
	box-shadow: 1px 1px 3px rgba(0,0,0,.4);
	border-radius: 0 0 4px 4px;
	display: none;
}
.dongtaiBar li{
	float: left;
}
.dongtaiBar li:hover{color: #00A1D6;text-decoration: underline;}
.dongtaiBar ul{
	width: 168px;
	margin: 0 auto;
	padding-top: 20px;
}
/*视频区*/
.dongtaiContent{
	height: 300px;
	text-align: center;
	color: #99a2aa;
	margin: 0 10px;
	overflow-y: scroll;
	overflow-x: hidden;
	display: block;
}
.chakanquanbu{
	width: 90%;
	height: 25px;
	line-height: 25px;
	text-align: center;
	margin: 0 auto;
	border-radius: 4px;
	background-color: #E5E9EF;
	margin-top: 10px;
}
/* ... */

